[DevTools] contextCreated should be called when context initialization is done

Inspector can evaluate and run debugger internal scripts in contextCreated method.

BUG=chromium:663845
R=dgozman@chromium.org

Review-Url: https://codereview.chromium.org/2498213002
Cr-Commit-Position: refs/heads/master@{#432923}